--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,3 +1,4 @@
+// Proxima Nova //
 @font-face {
 	font-family: 'Proxima Nova';
 	src:  url('../../assets/fonts/ProximaNova-Regular.otf')
@@ -6,6 +7,19 @@
 	font-family: 'ProximaNova-Extrabold';
 	src:  url('../../assets/fonts/ProximaNova-Extrabold.otf')
 }
+@font-face {
+	font-family: 'ProximaNova-SemiBold';
+	src:  url('../../assets/fonts//ProximaNova-Semibold.otf')
+}
+@font-face {
+	font-family: 'ProximaNova-Bold';
+	src:  url('../../assets/fonts/Montserrat-Bold.ttf')
+}
+@font-face {
+	font-family: 'ProximaNova-Black';
+	src:  url('../../assets/fonts/Montserrat-Black.ttf')
+}
+// Montserrat //
 @font-face {
 	font-family: 'Montserrat';
 	src:  url('../../assets/fonts/Montserrat-Regular.ttf')
