--- a/src/styles/scroll-section.scss
+++ b/src/styles/scroll-section.scss
@@ -121,6 +121,7 @@
 @media only screen and (max-width: 1024px){
   .scroll-section {
     overflow-x: scroll;
+    margin-bottom: -15px;
     .borvo {
       .neural {
         display: none;
